--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: Jillian Maroket  
-subtitle: Technical Writer
+subtitle: Content Strategy | UX Writing | Documentation
 theme: jekyll-theme-minimal
